# skillpointe

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  DECISIONS.md  DEPLOY.md  PROMPTS.md  README.md  SCORING_CONFIG.yaml  SPF-logo.avif  STATUS.md  Skilled Trades Scholarship Data.csv  import_wrapper.sql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  main.py  pyproject.toml  requirements.txt
apps/api/app/: config.py  db.py  main.py
apps/api/app/auth/: dependencies.py  schemas.py
apps/api/app/routers/: admin.py  applicants.py  auth.py  chat.py  employers.py  health.py  jobs.py  messaging.py
apps/api/app/schemas/: applicant.py  employer.py
apps/api/app/services/: chat.py
apps/api/app/worker/: __init__.py  scheduler.py
apps/api/tests/: conftest.py  test_auth.py  test_employer_visibility.py  test_etl_import.py  test_matching.py
apps/web/: .env.local.example  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: MATCHING_SCRIPTS.md  local-development.md  schema.md
infra/: docker-compose.local.yml
scripts/: check_connections.py  import_applicants.py  import_csv_applicants.py  import_jobs.py  inspect_matches.py  normalize_data.py  recompute_matches.py  run_extraction.py  scrape_jobs.py  seed_admin.py  seed_rich_test_data.py  seed_test_users.py  verify_schema.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260310000000_user_profiles.sql  20260310000001_enums_and_extensions.sql  20260310000002_taxonomy.sql  20260310000003_core_entities.sql  20260310000004_documents_and_signals.sql  (+10 more)
(+58 files in other folders)
